postgresql-autodoc (1.31-1) UNRELEASED; urgency=low

  * New upstream version.
    + Fixes compatibility with recent libdbd-pg-perl. (Closes: #469715)
  * debian/rules:
    + config.sub and config.guess are unused by ./configure, so remove
      altogether.
  * debian/control: Remove build dependency on autotools-dev.

 -- Tim Retout <tim@retout.co.uk>  Fri, 02 May 2008 00:34:03 +0100

postgresql-autodoc (1.30-2) unstable; urgency=low

  * New maintainer. (Closes: #439534)
  * debian/compat: Bump debhelper compatibility level to 5.
  * debian/control:
    + Bump Build-Depends on debhelper to at least version 5 (see above).
    + Add Build-Depends on autotools-dev, for config.sub and config.guess.
    + Change "PostrgreSQL" to "PostgreSQL" in description. (Closes: #447688)
    + Wrap long description to 80 characters.
    + Standards-Version bumped to 3.7.3 (no changes required).
    + Add new Homepage field.
    + Add new Vcs-* fields.
  * debian/copyright:
    + Update the years in the copyright field.
    + Add new Debian maintainer.
  * debian/rules:
    + Use RM="rm -f" in distclean line, and remove initial hyphen.
      (Fixes lintian warning about ignoring distclean errors.)
    + Respect DEB_BUILD_GNU_TYPE and DEB_HOST_GNU_TYPE variables, using code
      from autotools-dev documentation.
    + Remove config.sub, config.guess during clean.
  * debian/patches/01_finish_on_undefined_value_fix.dpatch: Remove, since it
    was disabled in the last upload.
  * debian/patches/02_synopsis_correction.dpatch: Add a description of the
    patch. (Fixes lintian warning about missing description.)
  * config.sub, config.guess: Remove in favour of autotools-dev build-dep.

 -- Tim Retout <tim@retout.co.uk>  Mon, 17 Dec 2007 01:32:12 +0000

postgresql-autodoc (1.30-1) unstable; urgency=low

  * New upstream release
  * debian/patches: disabled patch 01_finish_on_undefined_value_fix.dpatch
    since it is no longer needed.