@@ -99,6 +99,5 @@ configure: configure.ac
 
 # Fix my makefile, then execute myself
 $(CONFIGFILE) : config.mk.in configure
-#	./configure --prefix=\$${DESTDIR} --bindir=\$${prefix}/bin --datadir=\$${prefix}/share/postgresql-autodoc
-	./configure --prefix=/usr --bindir=\$${prefix}/bin --datadir=\$${prefix}/share/postgresql-autodoc
-	$(MAKE)
+	./configure
+	$(MAKE) $(MAKEFLAGS)
